--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>hashids</artifactId>
             <version>1.0.3</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>javase</artifactId>
+            <version>3.5.3</version>
+        </dependency>
     </dependencies>
 
     <build>
