--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,37 +7,23 @@ app.version=Hitract 1.0
 queue.enable=${QUEUE_ENABLE:true}
 main.node=${MAIN_NODE:true}
 
+
 rqueue.enabled=true
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
 rqueue.scheduler.polling.interval=5000
+
 server.port=8081
 rqueue.web.enable=true
 # Initial delay: 5 seconds
 rqueue.retry.default.backoff=5000
 rqueue.retry.backoff.multiplier=1
 
+
 spring.datasource.url=jdbc:mysql://${HITRACT_MYSQL_DB_HOST}:${HITRACT_MYSQL_DB_PORT}/${HITRACT_MYSQL_DB_NAME}?verifyServerCertificate=false&useSSL=true&requireSSL=false&allowPublicKeyRetrieval=true&useTimezone=true&serverTimezone=Europe/Stockholm&autoReconnect=true&useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=${HITRACT_MYSQL_DB_USERNAME}
-spring.datasource.password=${HITRACT_MYSQL_DB_PASSWORD}
+spring.datasource.username=${HITRACT_MYSQL_DB_USERNAME:username}
+spring.datasource.password=${HITRACT_MYSQL_DB_PASSWORD:password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-fortnox.clientId=ahEtiq7PvHZu
-fortnox.clientPassword=xlx5HU0Mjk
-
-instagram.clientId=922706976520406
-instagram.clientPassword=c11c82993c686bdf4eb03ec414bd8048
-
-google.clientId=139036732251-f0h77j94b7ekcnh353ju4lc7tk65hflk.apps.googleusercontent.com
-google.clientSecret=owpdl2xJCprVfiJnYao1boxs
-
-linkedIn.apiId=777mzeqerdmtgk
-linkedIn.secret=WPL_AP1.IFc0ZoFkiKs5rMsl.WF3+dg==
-
-tikTok.apiId.sandbox=sbawvh95uh7rxwl836
-tikTok.secret.sandbox=VNWBy5us2loLGkyTgZGHXh4hwoWX3C9n
-tikTok.apiId.prod=aw851etduyqths5e
-tikTok.secret.prod=aGIqD6Ug3Ltdad5OjpbCzx56subZXbf0
 
 
 # JPA / Hibernate
@@ -51,6 +37,10 @@ management.health.elasticsearch.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchClientAutoConfiguration,org.springframework.boot.autoconfigure.elasticsearch.ElasticsearchRestClientAutoConfiguration
 
 # Mailgun WireMock / Local Testing
-mailgun.api-key=fake-key
-mailgun.domain=sandbox.hitract.se
-mailgun.base-url=http://localhost:9090
+mailgun.api-key=${MAILGUN_API_KEY:fake-key}
+mailgun.domain=${MAILGUN_DOMAIN:sandbox.hitract.se}
+mailgun.base-url=${MAILGUN_URL:http://localhost:9090}
+
+
+
+
