--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,17 +41,16 @@ steps:
     displayName: Verify Build Result
 
 
-# - task: Docker@2
-#   displayName: 'Step 4: Push to DigitalOcean'
-#   inputs:
-#     containerRegistry: 'xxxxxxxxxxxx'
-#     repository: 'hitract/$(imageName)'
-#     command: 'push'
-#     tags: |
-#       latest
-#       $(Build.BuildId)
 
-
+  - task: Docker@2
+    displayName: Push to DigitalOcean
+    inputs:
+      containerRegistry: 'DigitalOceanRegistryConn' # This is just a pointer!
+      repository: 'hitract/$(imageName)'
+      command: 'push'
+      tags: |
+           latest
+           $(Build.BuildId)
 
 
 
