--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,15 +42,15 @@ steps:
 
 
 
-  - task: Docker@2
-    displayName: Push to DigitalOcean
-    inputs:
-      containerRegistry: 'DigitalOceanRegistryConn' # This is just a pointer!
-      repository: 'hitract/$(imageName)'
-      command: 'push'
-      tags: |
-           latest
-           $(Build.BuildId)
+#  - task: Docker@2
+#    displayName: Push to DigitalOcean
+#    inputs:
+#      containerRegistry: 'DigitalOceanRegistryConn' # This is just a pointer!
+#      repository: 'hitract/$(imageName)'
+#      command: 'push'
+#      tags: |
+#           latest
+#           $(Build.BuildId)
 
 
 
