--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 spring.application.name=micro-mail
-# Enable virtual threads
 spring.threads.virtual.enabled=true
 
 app.environment=${ENVIRONMENT}
 app.version=Hitract 1.0
 queue.enable=${QUEUE_ENABLE:true}
-main.node=${MAIN_NODE:true}
+#main.node=${MAIN_NODE:false}
 
 
 rqueue.enabled=true
@@ -28,8 +27,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA / Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+spring.datasource.hikari.maximum-pool-size=10
 
 # DISABLE Hibernate Search/Elasticsearch
 spring.jpa.properties.hibernate.search.enabled=false
